// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiselect with selected elements 1`] = `
<div
  className="multi-select"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      className="little-spacer-top"
      loading={true}
      onChange={[Function]}
      placeholder=""
      value=""
    />
  </div>
  <ul
    className="menu menu-vertically-limited spacer-top with-top-separator"
  >
    <MultiSelectOption
      active={true}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
      selected={true}
    />
  </ul>
</div>
`;

exports[`should render multiselect with selected elements 2`] = `
<div
  className="multi-select"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      className="little-spacer-top"
      loading={true}
      onChange={[Function]}
      placeholder=""
      value=""
    />
  </div>
  <ul
    className="menu menu-vertically-limited spacer-top with-top-separator"
  >
    <MultiSelectOption
      active={true}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
      selected={true}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "foo",
          "label": "foo",
        }
      }
      key="foo"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "baz",
          "label": "baz",
        }
      }
      key="baz"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
  </ul>
</div>
`;

exports[`should render multiselect with selected elements 3`] = `
<div
  className="multi-select"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      className="little-spacer-top"
      loading={true}
      onChange={[Function]}
      placeholder=""
      value=""
    />
  </div>
  <ul
    className="menu menu-vertically-limited spacer-top with-top-separator"
  >
    <MultiSelectOption
      active={false}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
      selected={true}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "foo",
          "label": "foo",
        }
      }
      key="foo"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={true}
      disabled={false}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "baz",
          "label": "baz",
        }
      }
      key="baz"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
  </ul>
</div>
`;

exports[`should render multiselect with selected elements 4`] = `
<div
  className="multi-select"
>
  <div
    className="menu-search"
  >
    <SearchBox
      autoFocus={true}
      className="little-spacer-top"
      loading={true}
      onChange={[Function]}
      placeholder=""
      value="test"
    />
  </div>
  <ul
    className="menu menu-vertically-limited spacer-top with-top-separator"
  >
    <MultiSelectOption
      active={false}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
      selected={true}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "foo",
          "label": "foo",
        }
      }
      key="foo"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={true}
      disabled={false}
      element={
        Object {
          "key": "bar",
          "label": "bar",
        }
      }
      key="bar"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={false}
      disabled={false}
      element={
        Object {
          "key": "baz",
          "label": "baz",
        }
      }
      key="baz"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
    <MultiSelectOption
      active={false}
      custom={true}
      element={
        Object {
          "key": "test",
          "label": "test",
        }
      }
      key="test"
      onHover={[Function]}
      onSelectChange={[Function]}
    />
  </ul>
</div>
`;
